# sway-farm

./: README.md  addnewPlayerReponse.json  chainConfig.json  fuel network sway farm contribution  hello.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: close-support-questions.yml  pr.yaml
chain-snapshot/: stateConfig.json
contract/: Cargo.toml  Forc.toml  fuel-toolchain.toml
contract/src/: abi_and_structs.sw  abi_structs.sw  main.sw  map_vec.sw
contract/tests/: harness.rs
frontend/: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  Ayojaycruise  README.md  chainConfig.json  craco.config.js  fuels.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  sample-package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  vercel.json
frontend/.fuels/snapshotDir/: chainConfig.json  metadata.json  stateConfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.test.tsx  App.tsx  constants.ts  index.css  index.tsx  main.tsx  utils.ts  utils2.ts
frontend/src/components/: Background.tsx  BuySeeds.tsx  Camera.tsx  FaucetingModal.tsx  Game.tsx  Garden.tsx  GardenTile.tsx  Harvest.tsx  Instructions.tsx  LevelUp.tsx  Loading.tsx  MobileControls.tsx  NewPlayer.tsx  PlantSeeds.tsx  Player.tsx  SellItem.tsx  ShowCoins.tsx  ShowItems.tsx  ShowPlantedSeeds.tsx  ShowSeeds.tsx
frontend/src/contexts/: TransactionContext.tsx  transactionContext.ts
frontend/src/contracts/: ContractAbi.d.ts  ContractAbi.hex.ts  common.d.ts  index.ts
(+39 files in other folders)
