[package]
name = "farm-contract"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["sarahschwartz <58856580+sarahschwartz@users.noreply.github.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.66.5", features = ["fuel-core-lib"] }
tokio = { version = "1.40.0", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
